tests/sksl/errors/ReservedNameSuperp.glsl
### Compilation failed:

error: 1: name 'superp' is reserved
int superp;
    ^^^^^^
1 error
